5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1721_3063.log
== TEST (2019-05-02 19:09:53) 
-- CODE:
a=int(input("diga a quantidade de ouros: "))
b=input("escolha o tipo de armadura MALHA, PLACA ou INTEIRA: ")
c=int(input("escolha um valor entre 1 e 8: "))

if (b==inteira.upper()) and (a>=200):
	f= 30*c-20
	print(f)

elif (b==malha.upper()) and (a>=50):
	f=15*c-1
	print(f)
elif(b==placa.upper()) and (a>=100):
	f=20*c-18
	print(f)
else:
	print("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==inteira.upper()) and (a>=200):
NameError: name 'inteira' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:10:29) 
-- CODE:
a=int(input("diga a quantidade de ouros: "))
b=input("escolha o tipo de armadura MALHA, PLACA ou INTEIRA: ")
c=int(input("escolha um valor entre 1 e 8: "))

if (b==inteira.upper()) and (a>=200):
	f= 30*c-20
	print(f)

elif (b==malha.upper()) and (a>=50):
	f=15*c-1
	print(f)
elif(b==placa.upper()) and (a>=100):
	f=20*c-18
	print(f)
else:
	print("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==inteira.upper()) and (a>=200):
NameError: name 'inteira' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:11:05) 
-- CODE:
a=int(input("diga a quantidade de ouros: "))
b=input("escolha o tipo de armadura MALHA, PLACA ou INTEIRA: ")
c=int(input("escolha um valor entre 1 e 8: "))

if (b=="inteira".upper()) and (a>=200):
	f= 30*c-20
	print(f)

elif (b=="malha".upper()) and (a>=50):
	f=15*c-1
	print(f)
elif(b=="placa".upper()) and (a>=100):
	f=20*c-18
	print(f)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:11:17) 
-- CODE:
a=int(input("diga a quantidade de ouros: "))
b=input("escolha o tipo de armadura MALHA, PLACA ou INTEIRA: ")
c=int(input("escolha um valor entre 1 e 8: "))

if (b=="inteira".upper()) and (a>=200):
	f= 30*c-20
	print(f)

elif (b=="malha".upper()) and (a>=50):
	f=15*c-1
	print(f)
elif(b=="placa".upper()) and (a>=100):
	f=20*c-18
	print(f)
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.156522
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
